--- a/data/project.json
+++ b/data/project.json
@@ -1,26 +1,1 @@
-{
-  "publish": {
-    "publish_pages_app": true,
-    "publish_sha": "",
-    "publish_iso_date": ""
-  },
-  "users": [],
-  "project": {
-    "github_org": "AVAnnotate",
-    "title": "Test New Tags",
-    "description": "Testing",
-    "language": "en",
-    "slug": "test-new-tags",
-    "creator": "lwjameson",
-    "authors": "",
-    "media_player": "avannotate",
-    "auto_populate_home_page": true,
-    "additional_users": [],
-    "tags": {
-      "tagGroups": [],
-      "tags": []
-    },
-    "created_at": "2024-09-26T20:13:58.622Z",
-    "updated_at": "2024-09-26T20:14:17.019Z"
-  }
-}
+{"publish":{"publish_pages_app":true,"publish_sha":"","publish_iso_date":""},"users":[],"project":{"github_org":"AVAnnotate","title":"Test New Tags","description":"Testing","language":"en","slug":"test-new-tags","creator":"lwjameson","authors":"","media_player":"avannotate","auto_populate_home_page":true,"additional_users":[],"tags":{"tagGroups":[{"category":"_uncategorized_","color":"#A3A3A3"}],"tags":[]},"created_at":"2024-09-26T20:13:58.622Z","updated_at":"2024-09-26T20:14:35.689Z"}}
